@@ -19,54 +19,40 @@
       the selected env. Port map is in
       `docs/adr/0025-ui-local-only-no-public-prod-ingress.md`.
 
-- [ ] **Drop the mirador-ui docker image build + push** in the UI repo's
-      `.gitlab-ci.yml`. The image is no longer deployed anywhere
-      (ADR-0025). Keeping the job is ~3 min of CI waste per MR.
+<!-- The mirador-ui docker image stays built + pushed. Even with ADR-0025
+     (no prod deployment) the image is useful for: local prod-like run
+     without `npm install`, CI integration tests against a built bundle,
+     one-command demo. Only the K8s Deployment is dropped, not the CI build. -->
 
-- [ ] **`code-quality` CI job — javac `--enable-preview` missing**.
-      The job re-compiles `target/merged-sources` through
-      `maven-compiler-plugin` without the preview flag, so it fails on
-      the 7 unnamed-variable (`_`) usages across the codebase
-      (ApiExceptionHandler, AuthController, JwtAuthenticationFilter,
-      RecentCustomerBuffer, ObservabilityConfig, QualityReportEndpoint,
-      TestReportInfoContributor). Either add `--enable-preview` to the
-      `code-quality` maven invocation, OR rewrite those 7 `_` back to
-      named throwaway vars. Pre-existing, unrelated to ADR-0025.
+- [ ] **Move UI image pipeline to a `test-image` stage** (UI repo).
+      Since the image is no longer a deploy artefact, mark it clearly
+      as a validation artefact. Tag `:main-<sha>` only, no `:latest`.
 
-- [ ] **CI push `:main` + `:latest` tags on every merge to main** —
-      registry only has `:<sha>` tags; `image-tags-patch.yaml` still
-      hard-codes a SHA. Once CI publishes `:main`, flip the patch to
-      `newTag: main` so Argo CD auto-pulls. ~15 min in `docker-build`
-      job of `.gitlab-ci.yml`.
-
-## Pending — Version upgrades (deferred majors, separate MRs each)
-
-- [ ] **Testcontainers** 1.21 → 2.0 — **blocked**. 2.0.x core is on
-      Maven Central but companion modules (`junit-jupiter`,
-      `postgresql`, `kafka`) only ship for 1.21.x; stay on 1.21.4
-      until modules catch up. Revisit periodically.
+- [ ] **UI repo — desktop deep-link buttons**. Wire the URI templates
+      from `docs/getting-started/dev-tooling.md` into the Angular UI
+      (Architecture + Database + Quality pages already have slots):
+      `vscode://file/<abs>:<line>`, `idea://open?file=<abs>&line=<n>`,
+      `docker-desktop://dashboard/container/<id>`, GitLab https URLs.
+      Fails silently if the target app is not installed — no feature
+      detection needed.
 
 ## Pending — Industry-standard upgrades
 
-- [~] **External Secrets Operator → Google Secret Manager cutover** —
-      operator is installed (2026-04-18), CRDs available. Remaining
-      user steps documented in ADR-0016: create the GSM entries,
-      grant the WIF-backed SA `roles/secretmanager.secretAccessor`,
-      move `deploy/external-secrets/*` into `base/external-secrets/`,
-      delete the hand-created `mirador-secrets` + `keycloak-secrets`
-      from the cluster.
-
-- [ ] **distroless java25 image** — switch once Google publishes it (track
-      https://github.com/GoogleContainerTools/distroless). Drops ~90 CVEs
-      vs `eclipse-temurin:25-jre`.
+<!-- ESO cutover complete: ESO in base/external-secrets/, ESO + 5 GSM
+     secrets live, the legacy deploy/external-secrets/ directory is gone.
+     Validated on cluster 2026-04-18: kubectl get externalsecrets -A shows
+     mirador-secrets + keycloak-secrets with STATUS: SecretSynced, READY: True. -->
 
 - [ ] **Argo Rollouts / Flagger** — progressive traffic split for canary
       deploys. Requires Istio or Linkerd; deferred (ADR-0015 notes it
       as a future upgrade path).
 
-- [ ] **Retire `deploy:gke` CI job** — now that Argo CD reconciles the
-      GKE overlay from main, the job is redundant. Keeping it until
-      the ConfigMap placeholder migration is confirmed stable.
+<!-- distroless-java25 blocker is documented in the Dockerfile header
+     (external, undated). Remove from tasks to avoid a rotting entry. -->
+
+
+<!-- deploy:gke retired. Argo CD + :main image tag close the loop. -->
+
 
 ## Recently Completed
 
